--- a/assignments/stellar/stellar.ipynb
+++ b/assignments/stellar/stellar.ipynb
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9e684ae2",
-        "outputId": "29652bd8-cf1d-45e9-bc0f-9549eed3d831"
+        "outputId": "c6f88a16-e97b-4287-f004-8345dab11eda"
       },
       "outputs": [
         {
@@ -94,14 +94,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "id": "505f5f2b",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "505f5f2b",
-        "outputId": "88c335f2-827a-4321-e5c3-73706481c23f"
+        "outputId": "e32a070c-47e8-46ea-94c9-c512c1d02da0"
       },
       "outputs": [
         {
@@ -261,10 +261,10 @@
           "height": 1000
         },
         "id": "S3uFM3-rsZTg",
-        "outputId": "cd05d16e-f983-4d78-dff8-911e7c31315b"
+        "outputId": "96e0495d-fe29-43ee-c30b-53c9bde33ee5"
       },
       "id": "S3uFM3-rsZTg",
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -316,10 +316,10 @@
           "height": 1000
         },
         "id": "4frf-Jg_tgje",
-        "outputId": "33616982-4720-42a3-ab70-c804270d507c"
+        "outputId": "ca83bd60-8355-4e71-9f3b-301a3c087f77"
       },
       "id": "4frf-Jg_tgje",
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -370,24 +370,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "d6bad953",
       "metadata": {
-        "id": "d6bad953"
+        "id": "d6bad953",
+        "outputId": "f020db3e-3760-4efb-fab6-0991f76e7ac3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting imblearn\n",
+            "  Downloading imblearn-0.0-py2.py3-none-any.whl.metadata (355 bytes)\n",
+            "Requirement already satisfied: imbalanced-learn in /usr/local/lib/python3.11/dist-packages (from imblearn) (0.13.0)\n",
+            "Requirement already satisfied: numpy<3,>=1.24.3 in /usr/local/lib/python3.11/dist-packages (from imbalanced-learn->imblearn) (2.0.2)\n",
+            "Requirement already satisfied: scipy<2,>=1.10.1 in /usr/local/lib/python3.11/dist-packages (from imbalanced-learn->imblearn) (1.15.3)\n",
+            "Requirement already satisfied: scikit-learn<2,>=1.3.2 in /usr/local/lib/python3.11/dist-packages (from imbalanced-learn->imblearn) (1.6.1)\n",
+            "Requirement already satisfied: sklearn-compat<1,>=0.1 in /usr/local/lib/python3.11/dist-packages (from imbalanced-learn->imblearn) (0.1.3)\n",
+            "Requirement already satisfied: joblib<2,>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from imbalanced-learn->imblearn) (1.5.0)\n",
+            "Requirement already satisfied: threadpoolctl<4,>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from imbalanced-learn->imblearn) (3.6.0)\n",
+            "Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
+            "Installing collected packages: imblearn\n",
+            "Successfully installed imblearn-0.0\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install imblearn"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "45f47770",
       "metadata": {
-        "id": "45f47770"
+        "id": "45f47770",
+        "outputId": "791035dc-c550-42c6-fe6d-7e8b17acd3c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "class\n",
+            "GALAXY    59445\n",
+            "STAR      21594\n",
+            "QSO       18961\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -404,12 +443,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "03a0421f",
       "metadata": {
-        "id": "03a0421f"
+        "id": "03a0421f",
+        "outputId": "45e400e5-ad9f-42fc-b4b7-d6b576eb8b8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([59445, 59445, 59445]))\n"
+          ]
+        }
+      ],
       "source": [
         "smote= SMOTE()\n",
         "x_smote, y_smote = smote.fit_resample(x, y)\n",
@@ -443,6 +494,110 @@
       "source": [
         "\n",
         "# YOUR CODE HERE\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "\n",
+        "# 1. Data Preparation\n",
+        "df = pd.read_csv(\"https://github.com/dfbarrero/dataCourse/raw/master/assignments/stellar/stellar.zip\")\n",
+        "# ... (Your data cleaning and preprocessing code) ...\n",
+        "X = df.drop('class', axis=1)\n",
+        "y = df['class']\n",
+        "\n",
+        "# Apply SMOTE for oversampling\n",
+        "smote = SMOTE(random_state=42)  # You can adjust the random_state\n",
+        "X_resampled, y_resampled = smote.fit_resample(X, y)\n",
+        "\n",
+        "# Split the resampled data\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# 2. Model Selection and Training\n",
+        "classifiers = {\n",
+        "    'Logistic Regression': LogisticRegression(),\n",
+        "    'Decision Tree': DecisionTreeClassifier(),\n",
+        "    'Random Forest': RandomForestClassifier(),\n",
+        "    'SVM': SVC(),\n",
+        "    'KNN': KNeighborsClassifier()\n",
+        "}\n",
+        "\n",
+        "for name, clf in classifiers.items():\n",
+        "    clf.fit(X_train, y_train)\n",
+        "    y_pred = clf.predict(X_test)\n",
+        "\n",
+        "    # 3. Evaluation\n",
+        "    accuracy = accuracy_score(y_test, y_pred)\n",
+        "    f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "    print(f'{name}:')\n",
+        "    print(f'  Accuracy: {accuracy:.4f}')\n",
+        "    print(f'  F1-score: {f1:.4f}')\n",
+        "    print(classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "bycesUatS0n7",
+        "outputId": "afa346a2-a213-4671-fab0-c6b04362d3a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "bycesUatS0n7",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Logistic Regression:\n",
+            "  Accuracy: 0.4922\n",
+            "  F1-score: 0.4594\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "      GALAXY       0.44      0.17      0.25     11806\n",
+            "         QSO       0.51      0.68      0.58     11865\n",
+            "        STAR       0.49      0.62      0.55     11996\n",
+            "\n",
+            "    accuracy                           0.49     35667\n",
+            "   macro avg       0.48      0.49      0.46     35667\n",
+            "weighted avg       0.48      0.49      0.46     35667\n",
+            "\n",
+            "Decision Tree:\n",
+            "  Accuracy: 0.9744\n",
+            "  F1-score: 0.9744\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "      GALAXY       0.96      0.96      0.96     11806\n",
+            "         QSO       0.96      0.96      0.96     11865\n",
+            "        STAR       1.00      1.00      1.00     11996\n",
+            "\n",
+            "    accuracy                           0.97     35667\n",
+            "   macro avg       0.97      0.97      0.97     35667\n",
+            "weighted avg       0.97      0.97      0.97     35667\n",
+            "\n",
+            "Random Forest:\n",
+            "  Accuracy: 0.9847\n",
+            "  F1-score: 0.9847\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "      GALAXY       0.97      0.98      0.98     11806\n",
+            "         QSO       0.98      0.97      0.98     11865\n",
+            "        STAR       1.00      1.00      1.00     11996\n",
+            "\n",
+            "    accuracy                           0.98     35667\n",
+            "   macro avg       0.98      0.98      0.98     35667\n",
+            "weighted avg       0.98      0.98      0.98     35667\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
